--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
 <script type="importmap">
 {
   "imports": {
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "express": "https://aistudiocdn.com/express@^5.1.0",
-    "dotenv": "https://aistudiocdn.com/dotenv@^17.2.3",
-    "cors": "https://aistudiocdn.com/cors@^2.8.5",
-    "path": "https://aistudiocdn.com/path@^0.12.7",
     "url": "https://aistudiocdn.com/url@^0.11.4",
     "mongoose": "https://aistudiocdn.com/mongoose@^8.20.0",
     "bcryptjs": "https://aistudiocdn.com/bcryptjs@^3.0.3",
+    "multer": "https://aistudiocdn.com/multer@^2.0.2",
+    "fs": "https://aistudiocdn.com/fs@^0.0.1-security",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "react": "https://aistudiocdn.com/react@^19.2.0",
     "jsonwebtoken": "https://aistudiocdn.com/jsonwebtoken@^9.0.2",
     "express-async-handler": "https://aistudiocdn.com/express-async-handler@^1.2.0",
-    "fs": "https://aistudiocdn.com/fs@^0.0.1-security",
-    "multer": "https://aistudiocdn.com/multer@^2.0.2",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0"
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "path": "https://aistudiocdn.com/path@^0.12.7",
+    "dotenv": "https://aistudiocdn.com/dotenv@^17.2.3",
+    "cors": "https://aistudiocdn.com/cors@^2.8.5",
+    "express": "https://aistudiocdn.com/express@^5.1.0"
   }
 }
 </script>
